--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -10,13 +10,15 @@
 </head>
 
 <body>
-    <div class="grid min-h-screen grid-cols-1 md:grid-cols-[25%_1fr] grid-rows-[10%_1fr] md:grid-rows-[90%_1fr] gap-0 bg-gray-50 p-4 md:p-0">
+    <div class="grid min-h-screen grid-cols-1 md:grid-cols-[25%_1fr] grid-rows-[10%_1fr] md:grid-rows-[90%_1fr] gap-0 bg-gray-50">
         {{> header}}
         <main class="max-h-dvh md:col-start-2 md:col-end-3 md:row-start-1 md:row-end-3 overflow-y-auto bg-gray-300">
             {{{body}}}
         </main>
         {{> footer}}
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/socket.io/socket.io.js"></script>
     <script src="/static/js/index.js"></script>
 </body>
 
