--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -1,4 +1,4 @@
-<header class="col-start-1 col-end-2 row-start-1 row-end-2">
+<header class="col-start-1 col-end-2 row-start-1 row-end-2 p-1 md:p-2 lg:p-0">
   <nav class="flex flex-col justify-normal md:h-full md:p-4 gap-2 md:gap-10">
     <div class="text-xl md:text-2xl text-center font-bol">
       <h1>Mega Stock</h1>
