--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -5,7 +5,7 @@
     </div>
     <div class="h-auto">
       <ul class="flex md:flex-col justify-between md:justify-normal items-center md:items-start text-sm md:text-base font-medium md:gap-5 list-none">
-        <a href="" class="w-full hover:bg-indigo-50 hover:text-indigo-600 group rounded-md md:p-2">
+        <a href="/api/products" class="w-full hover:bg-indigo-50 hover:text-indigo-600 group rounded-md md:p-2">
           <li class="truncate">
             Products
           </li>
@@ -20,7 +20,7 @@
             Users
           </li>
         </a>
-        <a href="" class="w-full hover:bg-indigo-50 hover:text-indigo-600 group rounded-md md:p-2">
+        <a href="/api/admin/products" class="w-full hover:bg-indigo-50 hover:text-indigo-600 group rounded-md md:p-2">
           <li>
             Admin settings
           </li>
