--- a/src/views/realTimeProducts.hbs
+++ b/src/views/realTimeProducts.hbs
@@ -144,10 +144,16 @@
           <tr>
             <th
               class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
+            >Id</th>
+            <th
+              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
             >Image</th>
             <th
               class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
             >Title</th>
+            <th
+              class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
+            >Description</th>
             <th
               class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider"
             >Code</th>
@@ -165,27 +171,31 @@
             >Actions</th>
           </tr>
         </thead>
-        <tbody class="bg-white divide-y divide-gray-200 overflow-scroll">
-          <tr class="hover:bg-gray-50">
-            <td class="px-6 py-4 whitespace-nowrap">
-              <img
-                src="https://images.unsplash.com/photo-1505740420928-5e560c06d30e"
-                alt="Product"
-                class="h-10 w-10 rounded-full"
-              />
-            </td>
-            <td class="px-6 py-4">Wireless Headphones</td>
-            <td class="px-6 py-4">PRD001</td>
-            <td class="px-6 py-4">$99.99</td>
-            <td class="px-6 py-4">50</td>
-            <td class="px-6 py-4">Electronics</td>
-            <td class="px-6 py-4">
-              <button
-                class="text-blue-600 hover:text-blue-900 mr-2"
-              >Edit</button>
-              <button class="text-red-600 hover:text-red-900">Delete</button>
-            </td>
-          </tr>
+        <tbody id="productsList" class="bg-white divide-y divide-gray-200 overflow-scroll">
+          {{#each products}}
+            <tr id={{id}} class="hover:bg-gray-50">
+              <td class="px-6 py-4">{{id}}</td>
+              <td class="px-6 py-4 whitespace-nowrap">
+                <img
+                  src=''
+                  alt={{title}}
+                  class="h-10 w-10 rounded-full"
+                />
+              </td>
+              <td class="px-6 py-4">{{title}}</td>
+              <td class="px-6 py-4">{{description}}</td>
+              <td class="px-6 py-4">{{code}}</td>
+              <td class="px-6 py-4">${{price}}</td>
+              <td class="px-6 py-4">{{stock}}</td>
+              <td class="px-6 py-4">{{category}}</td>
+              <td class="px-6 py-4">
+                <button
+                  class="text-blue-600 hover:text-blue-900 mr-2"
+                >Edit</button>
+                <button class="text-red-600 hover:text-red-900">Delete</button>
+              </td>
+            </tr>
+          {{/each}}
         </tbody>
       </table>
     </div>
