feat: 🎸 MongoAtlas & MongoDB implemented for products CRU

--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -20,7 +20,7 @@
             Users
           </li>
         </a>
-        <a href="/api/admin/products" class="w-full hover:bg-indigo-50 hover:text-indigo-600 group rounded-md md:p-2">
+        <a href="/api/admin" class="w-full hover:bg-indigo-50 hover:text-indigo-600 group rounded-md md:p-2">
           <li>
             Admin settings
           </li>
