--- a/src/views/realTimeProducts.hbs
+++ b/src/views/realTimeProducts.hbs
@@ -133,6 +133,7 @@
         type="submit"
         class="w-full bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"
       >Create Product</button>
+      <button id="cancelForm" type="button" class="mt-2 w-full bg-gray-300 text-gray-700 py-2 px-4 rounded-md hover:bg-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2">Cancel</button>
     </form>
   </div>
   <!-- Product Table Section -->
@@ -173,11 +174,11 @@
         </thead>
         <tbody id="productsList" class="bg-white divide-y divide-gray-200 overflow-scroll">
           {{#each products}}
-            <tr id={{id}} class="hover:bg-gray-50">
-              <td class="px-6 py-4">{{id}}</td>
+            <tr id={{_id}} class="hover:bg-gray-50">
+              <td class="px-6 py-4">{{_id}}</td>
               <td class="px-6 py-4 whitespace-nowrap">
                 <img
-                  src=''
+                  src={{thumbnails.[0]}}
                   alt={{title}}
                   class="h-10 w-10 rounded-full"
                 />
@@ -189,9 +190,7 @@
               <td class="px-6 py-4">{{stock}}</td>
               <td class="px-6 py-4">{{category}}</td>
               <td class="px-6 py-4">
-                <button
-                  class="text-blue-600 hover:text-blue-900 mr-2"
-                >Edit</button>
+                <button onclick="updateProduct('{{_id}}')" class="text-blue-600 hover:text-blue-900 mr-2">Edit</button>
                 <button class="text-red-600 hover:text-red-900">Delete</button>
               </td>
             </tr>
