--- a/src/views/realTimeProducts.hbs
+++ b/src/views/realTimeProducts.hbs
@@ -191,7 +191,7 @@
               <td class="px-6 py-4">{{category}}</td>
               <td class="px-6 py-4">
                 <button onclick="updateProduct('{{_id}}')" class="text-blue-600 hover:text-blue-900 mr-2">Edit</button>
-                <button class="text-red-600 hover:text-red-900">Delete</button>
+                <button onclick="handleDeletedProduct('{{_id}}')" class="text-red-600 hover:text-red-900">Delete</button>
               </td>
             </tr>
           {{/each}}
