--- a/src/views/productsClient.hbs
+++ b/src/views/productsClient.hbs
@@ -14,7 +14,7 @@
                 <p class="text-gray-600 text-sm mt-2 line-clamp-2">{{category}}</p>
                 <button
                 onclick='addToShoppingCart({{{toJSON this}}})'
-                class="w-full mt-4 bg-indigo-600 text-white py-2 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2"
+                class="w-full mt-4 bg-indigo-600 text-white py-2 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 cursor-pointer"
                 >Add to Cart</button>
             </div>
         </div>
