--- a/src/views/cartsAdmin.hbs
+++ b/src/views/cartsAdmin.hbs
@@ -3,7 +3,7 @@
         <div class="bg-white w-1/4 h-max p-6 rounded-lg shadow-lg">
             <h2 class="text-2xl font-bold mb-6">Products</h2>
             <article class="flex flex-col h-125 gap-4 overflow-scroll">
-                {{#each products}}
+                {{#each products.docs}}
                     <div class="bg-white rounded-lg h-max shadow hover:shadow-lg transition-shadow duration-300">
                         <div class="aspect-[10 / 16] w-full relative flex overflow-scroll snap-x">
                             {{#each thumbnails}}
