--- a/src/views/productsClient.hbs
+++ b/src/views/productsClient.hbs
@@ -1,6 +1,6 @@
 <div class="p-6">
   <article class="grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
-    {{#each products}}
+    {{#each products.docs}}
         <div class="bg-white rounded-lg shadow hover:shadow-lg transition-shadow duration-300">
             <div class="aspect-[10 / 16] w-full relative flex overflow-scroll snap-x">
                 {{#each thumbnails}}
