--- a/src/views/cartClient.hbs
+++ b/src/views/cartClient.hbs
@@ -3,7 +3,7 @@
     class="grid grid-cols-1 md:grid-cols-2 grid-rows-2 md:grid-rows-1 justify-items-stretch gap-4"
   >
 
-  {{#if cart}}
+  {{#if response}}
     <p>Exite carrito, aca se muestra la informacion del carrito</p>
     {{else}}
         <div class="md:row-span-2">
@@ -67,7 +67,7 @@
           </div>
         </div>
       </fieldset>
-      {{!-- <fieldset>
+      <fieldset>
         <legend class="text-xl font-semibold mb-4">Delivery information</legend>
         <div class="space-y-4">
           <div>
@@ -107,8 +107,8 @@
               </select>
             </div>
             <div>
-              <label class="block text-sm font-medium text-gray-700" for="payProviderClient">State</label>
-              <select class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500" name="payProviderClient" id="payTypeClient" required>
+              <label class="block text-sm font-medium text-gray-700" for="payProviderClient">Provider</label>
+              <select class="mt-1 block w-full rounded-md border-gray-300 shadow-sm focus:border-blue-500 focus:ring-blue-500" name="payProviderClient" id="payProviderClient" required>
                 <option value="visa">Visa</option>
                 <option value="master">Master Card</option>
               </select>
@@ -129,7 +129,7 @@
             </div>
           </div>
         </div>
-      </fieldset> --}}
+      </fieldset>
       <div class="flex flex-col gap-4 mt-10">
         <div class="flex items-center gap-4">
           <p class="text-2xl">Sub Total:</p>
