Feat: Views and route for users login and register

--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -15,7 +15,7 @@
             Cart
           </li>
         </a>
-        <a href="" class="w-full hover:bg-indigo-50 text-center md:text-start hover:text-indigo-600 group rounded-md md:p-2">
+        <a href="/api/clients/user" class="w-full hover:bg-indigo-50 text-center md:text-start hover:text-indigo-600 group rounded-md md:p-2">
           <li>
             User
           </li>
