Fix: Views updated

--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -5,17 +5,17 @@
     </div>
     <div class="h-auto">
       <ul class="flex md:flex-col justify-between md:justify-normal items-center md:items-start text-sm md:text-base font-medium md:gap-5 list-none">
-        <a href="/api/clients/products" class="w-full hover:bg-indigo-50 text-center md:text-start hover:text-indigo-600 group rounded-md md:p-2">
+        <a href="/api/products" class="w-full hover:bg-indigo-50 text-center md:text-start hover:text-indigo-600 group rounded-md md:p-2">
           <li class="truncate">
             Products
           </li>
         </a>
-        <a href="/api/clients/cart" class="w-full hover:bg-indigo-50 text-center md:text-start hover:text-indigo-600 group rounded-md md:p-2">
+        <a href="/api/cart" class="w-full hover:bg-indigo-50 text-center md:text-start hover:text-indigo-600 group rounded-md md:p-2">
           <li>
             Cart
           </li>
         </a>
-        <a href="/api/clients/user" class="w-full hover:bg-indigo-50 text-center md:text-start hover:text-indigo-600 group rounded-md md:p-2">
+        <a href="/api/user" class="w-full hover:bg-indigo-50 text-center md:text-start hover:text-indigo-600 group rounded-md md:p-2">
           <li>
             User
           </li>
