--- a/src/views/userRegister.hbs
+++ b/src/views/userRegister.hbs
@@ -46,6 +46,6 @@
             </fieldset>
             <button type="button" onclick="registerUserSubmit()" class="w-full bg-indigo-600 text-center text-indigo-50 rounded-md md:p-2 cursor-pointer">Register</button>
         </form>
-        <a href="/api/clients/user" class="w-fit text-gray-400 mt-5 mx-auto">Login</a>
+        <a href="/api/user" class="w-fit text-gray-400 mt-5 mx-auto">Login</a>
     </div>
 </div>
