--- a/src/views/adminLogin.hbs
+++ b/src/views/adminLogin.hbs
@@ -1,5 +1,5 @@
 <div class="flex items-center justify-center h-full w-full gap-8 p-6">
-    <div class="flex flex-col justify-between min-h-1/3 bg-white p-6 rounded-lg shadow-lg">
+    <div class="flex flex-col justify-around min-h-1/3 bg-white p-6 rounded-lg shadow-lg">
         <h2 class="text-3xl font-bold mb-6 text-center">Welcome!</h2>
         <form method="post" id="adminLoginForm" class="space-y-6">
             <div>
