--- a/src/views/productsAdmin.hbs
+++ b/src/views/productsAdmin.hbs
@@ -131,6 +131,7 @@
 
       <button
         type="submit"
+        onclick="handleFormSubmit()"
         class="w-full bg-blue-600 text-white py-2 px-4 rounded-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"
       >Create Product</button>
       <button id="cancelForm" type="button" class="mt-2 w-full bg-gray-300 text-gray-700 py-2 px-4 rounded-md hover:bg-gray-400 focus:outline-none focus:ring-2 focus:ring-gray-500 focus:ring-offset-2">Cancel</button>
