--- a/src/views/productsAdmin.hbs
+++ b/src/views/productsAdmin.hbs
@@ -174,7 +174,7 @@
           </tr>
         </thead>
         <tbody id="productsList" class="bg-white divide-y divide-gray-200 overflow-scroll">
-          {{#each products.docs}}
+          {{#each products}}
             <tr id={{id}} class="hover:bg-gray-50">
               <td class="px-6 py-4">{{id}}</td>
               <td class="px-6 py-4 whitespace-nowrap">
